[project]
name = "ukebook_helper"
version = "1.0.0"
description = "A helper tool for managing Ukebook song selections"
authors = [
    {name = "Frank Mattheus"}
]
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-2.0"
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
    "thefuzz>=0.22.1,<0.23.0",
    "python-levenshtein>=0.27.1,<0.28.0",
    "prompt-toolkit>=3.0.51,<4.0.0",
    "tomli>=2.0.1,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0"
]

[project.scripts]
ukebook_helper = "ukebook_helper:main"
